--- a/style.css
+++ b/style.css
@@ -1,27 +1,18 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
 }
-h1{
-    text-align: center;
+.hoje{
+    color: darkred; 
 }
-h2{
-    margin: 0;
-}
-div{
-    background: #111;
-    color: #b2b2b2;
-    padding: 20px;
-    border-radius: 10px;
-    margin-bottom: 20px;
-}
-span{
-    color: #febe01;
+.amanha{
+    color: darkblue;
 }
 a{
-    background-color: #febe01;
-    text-decoration:none;
-    color: #111;
-    padding: 10px 20px;
-    display: inline-block;
-    border-radius: 10px;  
+    text-decoration: none;
+}
+h2 a{
+    color: seagreen;
+}
+p{
+    font-size: 20px;
 }
