--- a/style.css
+++ b/style.css
@@ -1,18 +1,37 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
+    margin: 10px;
+    border: 1px solid black;
 }
-.hoje{
-    color: darkred; 
-}
-.amanha{
-    color: darkblue;
+h1{
+    margin: 5px;
+    font-size: 34px;
 }
 a{
+    background-color:#a887fd;
+    color: black;
+    padding: 10px;
+    border-radius: 2px;
     text-decoration: none;
+    display: inline-block;
 }
-h2 a{
-    color: seagreen;
+img{
+    padding: 0px;
+    border-radius: 10px;
+    height: 480px;
 }
 p{
-    font-size: 20px;
+    text-align: justify;
+    margin: 10px;
+    font-size:19px;
+}
+.price{
+    background-color: rgb(213, 211, 211);
+    padding: 5px;
+}
+.grid{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+    margin: 10px;
 }
