--- a/style.css
+++ b/style.css
@@ -1,37 +1,96 @@
-body{
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 10px;
-    border: 1px solid black;
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  cursor: url("/img/magico.png"), auto;
 }
-h1{
-    margin: 5px;
-    font-size: 34px;
+
+ul {
+  margin: 0;
+  list-style: none;
+  padding: 0;
+  display: grid;
+  gap: 10px;
 }
-a{
-    background-color:#a887fd;
-    color: black;
-    padding: 10px;
-    border-radius: 2px;
-    text-decoration: none;
-    display: inline-block;
+
+a {
+  display: flex;
+  gap: 7px;
+  text-decoration: none;
+  color: rgb(197, 7, 7);
+  align-items: center;
 }
-img{
-    padding: 0px;
-    border-radius: 10px;
-    height: 480px;
+
+aside {
+  background: rgb(211, 206, 206);
+  width: 200px;
+  padding: 15px;
+  height: 500px;
+  display: grid;
+  gap: 20px;
+  position: fixed;
 }
-p{
-    text-align: justify;
-    margin: 10px;
-    font-size:19px;
+
+img {
+  display: block;
+  max-width: 100%;
 }
-.price{
-    background-color: rgb(213, 211, 211);
-    padding: 5px;
+nav {
+  justify-content: center;
+  display: grid;
 }
-.grid{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 20px;
-    margin: 10px;
+
+.item {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  background: rgb(211, 206, 206);
+  position: relative;
+}
+
+main {
+  margin-left: 250px;
+}
+
+.descricao {
+  padding: 20px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 10px;
+  align-items: end;
+}
+
+.descricao span {
+  font-size: 20px;
+}
+
+#promo {
+  background: rgb(161, 161, 25);
+  padding: 10px 20px;
+  position: absolute;
+  top: 15px;
+  left: 20px;
+}
+
+h1,
+p {
+  grid-column: 1/-1;
+  margin: 0;
+}
+.valores {
+  display: grid;
+  justify-items: end;
+}
+
+p {
+  font-size: 20px;
+}
+
+#taxado {
+  text-decoration: line-through;
+}
+
+footer {
+  padding: 20px;
+  background: gray;
+  text-align: center;
+  margin-top: 15px;
 }
