Primeiro exercício de JS

--- a/style.css
+++ b/style.css
@@ -1,96 +1,24 @@
-body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-  cursor: url("/img/magico.png"), auto;
+*{
+    font-size: 60px;
 }
-
-ul {
-  margin: 0;
-  list-style: none;
-  padding: 0;
-  display: grid;
-  gap: 10px;
+body{
+    background-color: #f0f0f0;
+    font-family: Arial, sans-serif;
+    text-align: center;
+    margin: 50px;
 }
-
-a {
-  display: flex;
-  gap: 7px;
-  text-decoration: none;
-  color: rgb(197, 7, 7);
-  align-items: center;
+.botao{
+    background-color: #334ff8;
+    color: #ffffff;
+    padding: 20px;
+    border-radius: 20px;
+    border: none;
+    cursor: pointer;
 }
-
-aside {
-  background: rgb(211, 206, 206);
-  width: 200px;
-  padding: 15px;
-  height: 500px;
-  display: grid;
-  gap: 20px;
-  position: fixed;
+.container{
+    margin: 5px;
 }
-
-img {
-  display: block;
-  max-width: 100%;
-}
-nav {
-  justify-content: center;
-  display: grid;
-}
-
-.item {
-  display: grid;
-  grid-template-columns: 1fr 2fr;
-  background: rgb(211, 206, 206);
-  position: relative;
-}
-
-main {
-  margin-left: 250px;
-}
-
-.descricao {
-  padding: 20px;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 10px;
-  align-items: end;
-}
-
-.descricao span {
-  font-size: 20px;
-}
-
-#promo {
-  background: rgb(161, 161, 25);
-  padding: 10px 20px;
-  position: absolute;
-  top: 15px;
-  left: 20px;
-}
-
-h1,
-p {
-  grid-column: 1/-1;
-  margin: 0;
-}
-.valores {
-  display: grid;
-  justify-items: end;
-}
-
-p {
-  font-size: 20px;
-}
-
-#taxado {
-  text-decoration: line-through;
-}
-
-footer {
-  padding: 20px;
-  background: gray;
-  text-align: center;
-  margin-top: 15px;
+.mensagem {
+    color: #0f1a5d;
+    margin-top: 5px;
 }
